This is a partial repair to #53 and collapses the footer nav at 840px
@Plebster - is this the right place to collapse. I don't think it's
a bootstrap value, but I'm in a rush!

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -501,7 +501,15 @@ html {
 
   #zone-footer-second ul.navbar-nav {
     flex-direction: row;
+    flex-wrap: wrap;
   }
+
+  @media screen and (max-width: 840px) {
+    #zone-footer-second ul.navbar-nav {
+      flex-direction: column;
+    }
+  }
+
   #zone-footer-second .dropdown-menu {
     display: block;
     border: none;
